<resources>
    <string name="app_name">NASAAppActionVisualizer</string>
    <string name="tab_text_statistics">Statistics</string>
    <string name="tab_text_all">All</string>
    <string name="tab_text_common">Common</string>
    <string name="tab_text_finance">Finance</string>
    <string name="tab_text_food">Food and Drink</string>
    <string name="tab_text_health">Health and fitness</string>
    <string name="tab_text_transportation">Transportation</string>
    <string name="pick_up_location">Enter pick up location</string>
    <string name="drop_off_location">Enter drop off location</string>
    <string name="menu_save">Save</string>
    <string name="location">%1$s, %2$s</string>
    <string name="coordinates_pick_up">Coordinates: %1$s,  %2$s</string>
    <string name="search">Search</string>
    <string name="input_hint">%1$s not input yet</string>
    <string name="url_parameter">%1$s=%2$s</string>
    <string name="url_action_prefix">https://developers.google.com/assistant/app/reference/built-in-intents/%1$s/%2$s</string>
    <string name="url_reference_prefix">https://play.google.com/store/apps/details?id=%1$s</string>
    <string name="reference_link">reference link:</string>
    <string name="addition_text">%1$s(%2$s)</string>
    <!-- dashboard display texts !-->
    <string name="dashboard">Dashboard</string>
    <string name="app">App counts</string>
    <string name="fulfillment_option">Deep link/Slice numbers</string>
    <string name="input_action">Input your words</string>
    <!-- key-value pair !-->
    <string name="kv_string_int">%1$s: %2$d\n</string>
    <string name="slice">Slice:  %1$d\n</string>
    <string name="no_parameter">None parameter:  %1$d\n</string>
    <string name="single_parameter">Single parameter:  %1$d\n</string>
    <string name="multiple_parameter">Multiple parameters:  %1$d\n</string>
    <string name="all_parameter">All:  %1$d\n</string>
    <string name="statistics">Data:</string>
    <string name="detail">Detail</string>
    <!-- error hints!-->
    <string name="error_parsing">An error occurred when parsing the intent url!</string>
    <string name="error_activity">No corresponding activity!</string>
    <string name="error_not_deeplink">unknown link type!</string>
    <string name="error_unknown">unknown error!</string>
    <string name="error_filter">Do not support url-filter now</string>
    <string name="unknown">*unknown</string>
    <string name="unknown_texts">Cannot recognize!</string>
    <string name="loaded">Already loaded!</string>


    <string name="create_taxi">actions.intent.CREATE_TAXI_RESERVATION</string>
    <!-- current apps' names !-->
    <string name="com_olacabs_customer">Ola</string>
    <string name="com_lge_lifetracker">LG Health</string>
    <string name="com_ubercab">Uber</string>
    <string name="com_mapmywalk_android2">MapMyWalk</string>
    <string name="br_com_bb_android">BB</string>
    <string name="com_fitnesskeeper_runkeeper_pro">Runkeeper</string>
    <string name="com_taxis99">99</string>
    <string name="com_gettaxi_android">Gett</string>
    <string name="com_mapmyride_android2">MapMyRide</string>
    <string name="com_grability_rappi">Rappi</string>
    <string name="com_uznewmax_mytaxi">MyTaxi</string>
    <string name="com_cabify_rider">Cabify</string>
    <string name="com_starbucks_mobilecard">Starbucks</string>
    <string name="com_mcdonalds_app">McDonald\'s</string>
    <string name="fr_chauffeurprive">Kapten</string>
    <string name="com_strava">Strava</string>
    <string name="com_dunkinbrands_otgo">Dunkin\'</string>
    <string name="ee_mtakso_client">Bolt</string>
    <string name="com_runtastic_android">adidas Running</string>
    <string name="com_cornermation_calltaxi">HKTaxi</string>
    <string name="com_dd_doordash">DoorDash</string>
    <string name="com_ubercab_eats">Uber Eats</string>
    <string name="com_grubhub_android">Grubhub</string>
    <string name="com_gojek_app">Gojek</string>
    <string name="com_google_android_apps_docs">Drive</string>
    <string name="com_msf_kbank_mobile">Kotak Bank</string>
    <string name="com_google_android_youtube">YouTube</string>
    <string name="com_paypal_android_p2pmobile">PayPal</string>
    <string name="com_panera_bread">Panera</string>
    <string name="com_winit_merucab">Meru Cabs</string>
    <string name="sinet_startup_indriver">inDriver</string>
    <string name="at_austrosoft_t4me_mb_berlintzbeu">taxi_eu</string>
    <string name="com_careem_acma">Careem</string>
    <string name="com_wendys_nutritiontool">Wendy\'s</string>
    <string name="com_bitaksi_musteri">BiTaksi</string>
    <string name="com_citi_citimobile">Citi Mobile</string>
    <string name="jp_co_nikko_data_japantaxi">JapanTaxi</string>
    <string name="com_google_android_googlequicksearchbox">Google</string>
    <string name="com_bemyeyes_bemyeyes">Be My Eyes</string>
    <string name="me_lyft_android">Lyft</string>
    <string name="com_healthifyme_basic">HealthifyMe</string>
    <string name="com_pinterest">Pinterest</string>
    <string name="com_nu_production">Nubank</string>
    <string name="com_grabtaxi_passenger">Grab</string>
    <string name="br_com_brainweb_ifood">iFood</string>
    <string name="com_mapmyrun_android2">MapMyRun</string>
    <string name="com_etrade_mobilepro_activity">E*TRADE</string>
    <string name="gr_androiddev_taxibeat">Beat</string>
    <string name="com_google_android_apps_fitness">Fit</string>
    <string name="com_facebook_katana">Facebook</string>
    <string name="com_evernote">Evernote</string>
    <string name="in_swiggy_android">Swiggy</string>
    <string name="com_audible_application">Audible</string>
    <string name="com_sdu_didi_psnger">DiDi</string>
    <string name="com_fitnow_loseit">Lose It!</string>
    <string name="com_nike_plusgps">Nike⁠ Run Club</string>
</resources>