<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.parameter.LocationActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pick_up_textField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="1dp"
        android:hint="@string/pick_up_location"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toBottomOf="@+id/search_pick_up"
        app:layout_constraintEnd_toStartOf="@+id/search_pick_up"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pick_up_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="60" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/search_pick_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="43dp"
        android:text="@string/search"
        app:layout_constraintBottom_toTopOf="@+id/search_drop_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pick_up_textField"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/drop_off_textField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="1dp"
        android:hint="@string/drop_off_location"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toBottomOf="@+id/search_drop_off"
        app:layout_constraintEnd_toStartOf="@+id/search_drop_off"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/drop_off_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="60" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/search_drop_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/search"
        app:layout_constraintBottom_toTopOf="@+id/address_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/drop_off_textField"
        app:layout_constraintTop_toBottomOf="@+id/search_pick_up" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/address_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_drop_off" />
</androidx.constraintlayout.widget.ConstraintLayout>